fixed backgroud parallax works but not responsive

--- a/fixed-background/index.html
+++ b/fixed-background/index.html
@@ -2,8 +2,53 @@
 <html>
 <head>
 	<title>Fixed Background Parallax</title>
+	<!-- jQuery -->
+	<script type="text/javascript" src="lib/jquery/jquery-2.1.4.js"></script>
+	<!-- Bootstrap-->
+	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css">
+	<script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
+	<!-- Stylesheet -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<!-- Non-Essential Styles -->
+	<style type="text/css">
+		.large-div { height: 2000px; }
+		body {
+			color: #333;
+		}
+		#bird-facts h1 { 
+			text-align: center;
+			padding: 50px 0px 20px 0px;
+			color: #D8D8D8;
+		}
+		#bird-facts p {
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
-	
+	<header>
+		
+	</header>
+
+	<!-- Bird Facts -->
+	<section id="bird-facts" class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<h1>Mosque</h1>
+				<hr>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut lorem sem. Nunc elementum pellentesque tempor. Praesent ullamcorper consectetur lorem ut auctor. Maecenas sit amet neque arcu. Phasellus posuere gravida odio, quis vehicula sem ultricies et. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis malesuada ullamcorper dui, ac maximus sapien placerat eget. Vestibulum nunc justo, imperdiet vitae nibh id, molestie iaculis arcu. Quisque sit amet tortor nisl. Vestibulum a vehicula metus. Maecenas placerat feugiat justo, in ultricies libero facilisis vel. Nam varius, nulla eget facilisis gravida, ex orci condimentum lacus, in sodales neque est et tellus.
+				</p>	
+			</div>
+		</div>
+	</section> <!-- End Bird Facts-->
+
+	<!-- Height -->
+	<div class="large-div">
+	</div> <!-- End Height s-->
+
+	<!-- Functions -->
+	<script type="text/javascript" src="js/functions.js"></script>
 </body>
 </html>
