--- a/fixed-background/index.html
+++ b/fixed-background/index.html
@@ -12,27 +12,29 @@
 
 	<!-- Non-Essential Styles -->
 	<style type="text/css">
-		.large-div { height: 2000px; }
 		body {
 			color: #333;
 		}
-		#bird-facts h1 { 
+		.divider {
+			height: 700px;
+		}
+		.divider h1 { 
 			text-align: center;
 			padding: 50px 0px 20px 0px;
 			color: #D8D8D8;
 		}
-		#bird-facts p {
+		.divider p {
 			text-align: center;
 		}
 	</style>
 </head>
 <body>
-	<header>
-		
-	</header>
+	<!-- Parallax 1 -->
+	<div class="parallax-div parallax-1">
+	</div> <!-- End Parallax 1 -->
 
-	<!-- Bird Facts -->
-	<section id="bird-facts" class="container">
+	<!-- Divider -->
+	<section class="container divider">
 		<div class="row">
 			<div class="col-lg-12">
 				<h1>Mosque</h1>
@@ -42,7 +44,24 @@
 				</p>	
 			</div>
 		</div>
-	</section> <!-- End Bird Facts-->
+	</section> <!-- End Divider-->
+
+	<!-- Parallax 2 -->
+	<div class="parallax-div parallax-2">
+	</div> <!-- End Parallax 2 -->
+
+	<!-- Divider -->
+	<section class="container divider">
+		<div class="row">
+			<div class="col-lg-12">
+				<h1>Mosque</h1>
+				<hr>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut lorem sem. Nunc elementum pellentesque tempor. Praesent ullamcorper consectetur lorem ut auctor. Maecenas sit amet neque arcu. Phasellus posuere gravida odio, quis vehicula sem ultricies et. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis malesuada ullamcorper dui, ac maximus sapien placerat eget. Vestibulum nunc justo, imperdiet vitae nibh id, molestie iaculis arcu. Quisque sit amet tortor nisl. Vestibulum a vehicula metus. Maecenas placerat feugiat justo, in ultricies libero facilisis vel. Nam varius, nulla eget facilisis gravida, ex orci condimentum lacus, in sodales neque est et tellus.
+				</p>	
+			</div>
+		</div>
+	</section> <!-- End Divider-->
 
 	<!-- Height -->
 	<div class="large-div">
