--- a/fixed-background/index.html
+++ b/fixed-background/index.html
@@ -63,9 +63,22 @@
 		</div>
 	</section> <!-- End Divider-->
 
-	<!-- Height -->
-	<div class="large-div">
-	</div> <!-- End Height s-->
+	<!-- Parallax 3 -->
+	<div class="parallax-div parallax-3">
+	</div> <!-- End Parallax 3 -->
+
+	<!-- Divider -->
+	<section class="container divider">
+		<div class="row">
+			<div class="col-lg-12">
+				<h1>Mosque</h1>
+				<hr>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut lorem sem. Nunc elementum pellentesque tempor. Praesent ullamcorper consectetur lorem ut auctor. Maecenas sit amet neque arcu. Phasellus posuere gravida odio, quis vehicula sem ultricies et. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis malesuada ullamcorper dui, ac maximus sapien placerat eget. Vestibulum nunc justo, imperdiet vitae nibh id, molestie iaculis arcu. Quisque sit amet tortor nisl. Vestibulum a vehicula metus. Maecenas placerat feugiat justo, in ultricies libero facilisis vel. Nam varius, nulla eget facilisis gravida, ex orci condimentum lacus, in sodales neque est et tellus.
+				</p>	
+			</div>
+		</div>
+	</section> <!-- End Divider-->
 
 	<!-- Functions -->
 	<script type="text/javascript" src="js/functions.js"></script>
