disabled parallax on mobile for fixed-background

--- a/fixed-background/index.html
+++ b/fixed-background/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Fixed Background Parallax</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=9" />
 	<!-- jQuery -->
 	<script type="text/javascript" src="lib/jquery/jquery-2.1.4.js"></script>
 	<!-- Bootstrap-->
@@ -9,6 +11,7 @@
 	<script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
 	<!-- Stylesheet -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Fixed Background Parallax</title>
 
 	<!-- Non-Essential Styles -->
 	<style type="text/css">
