added center align for parallax areas

--- a/fixed-background/index.html
+++ b/fixed-background/index.html
@@ -19,7 +19,7 @@
 			color: #333;
 		}
 		.divider {
-			height: 700px;
+			height: 500px;
 		}
 		.divider h1 { 
 			text-align: center;
@@ -34,6 +34,18 @@
 <body>
 	<!-- Parallax 1 -->
 	<div class="parallax-div parallax-1">
+		<div class="box-wrap">
+			<div class="box">
+				<div class="container">
+					<div class="row">
+						<h1>Some Text</h1>
+						<p>
+							Ut ultrices diam ut quam dapibus, at vulputate odio bibendum. Fusce sed lectus nulla. Phasellus id ultrices nisi. Nulla non maximus sem. Vestibulum vulputate mi non rhoncus consequat. Nam ultricies sem eget justo feugiat, sit amet mollis nulla viverra. Aenean ac cursus nisi, sit amet laoreet quam.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div> <!-- End Parallax 1 -->
 
 	<!-- Divider -->
@@ -51,6 +63,18 @@
 
 	<!-- Parallax 2 -->
 	<div class="parallax-div parallax-2">
+		<div class="box-wrap">
+			<div class="box">
+				<div class="container">
+					<div class="row">
+						<h1>Some Text</h1>
+						<p>
+							Ut ultrices diam ut quam dapibus, at vulputate odio bibendum. Fusce sed lectus nulla. Phasellus id ultrices nisi. Nulla non maximus sem. Vestibulum vulputate mi non rhoncus consequat. Nam ultricies sem eget justo feugiat, sit amet mollis nulla viverra. Aenean ac cursus nisi, sit amet laoreet quam.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div> <!-- End Parallax 2 -->
 
 	<!-- Divider -->
@@ -68,6 +92,18 @@
 
 	<!-- Parallax 3 -->
 	<div class="parallax-div parallax-3">
+		<div class="box-wrap">
+			<div class="box">
+				<div class="container">
+					<div class="row">
+						<h1>Some Text</h1>
+						<p>
+							Ut ultrices diam ut quam dapibus, at vulputate odio bibendum. Fusce sed lectus nulla. Phasellus id ultrices nisi. Nulla non maximus sem. Vestibulum vulputate mi non rhoncus consequat. Nam ultricies sem eget justo feugiat, sit amet mollis nulla viverra. Aenean ac cursus nisi, sit amet laoreet quam.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div> <!-- End Parallax 3 -->
 
 	<!-- Divider -->
