added basic bootstrap menu and changed divider to auto scaling height

--- a/fixed-background/index.html
+++ b/fixed-background/index.html
@@ -17,13 +17,14 @@
 	<style type="text/css">
 		body {
 			color: #333;
+			padding-top: 50px; /* Push page down because of fixed bootstrap menu */
 		}
 		.divider {
-			height: 500px;
+			padding: 70px 0;
 		}
 		.divider h1 { 
 			text-align: center;
-			padding: 50px 0px 20px 0px;
+			
 			color: #D8D8D8;
 		}
 		.divider p {
@@ -32,6 +33,29 @@
 	</style>
 </head>
 <body>
+
+	<!-- Nav -->
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Project name</a>
+			</div>
+			<div id="navbar" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</div><!--/.nav-collapse -->
+		</div>
+	</nav> <!-- End Nav -->
+
 	<!-- Parallax 1 -->
 	<div class="parallax-div parallax-1">
 		<div class="box-wrap">
