added landing elements

--- a/fixed-background/index.html
+++ b/fixed-background/index.html
@@ -16,15 +16,14 @@
 	<!-- Non-Essential Styles -->
 	<style type="text/css">
 		body {
-			color: #333;
+			color: #AFAFAF;
 			padding-top: 50px; /* Push page down because of fixed bootstrap menu */
 		}
 		.divider {
 			padding: 70px 0;
 		}
-		.divider h1 { 
+		.divider h1, .divider h2 { 
 			text-align: center;
-			
 			color: #D8D8D8;
 		}
 		.divider p {
@@ -102,14 +101,22 @@
 	</div> <!-- End Parallax 2 -->
 
 	<!-- Divider -->
-	<section class="container divider">
+	<section id="important-facts" class="container divider">
 		<div class="row">
 			<div class="col-lg-12">
-				<h1>Mosque</h1>
+				<h2>Landing Elements</h2>
 				<hr>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut lorem sem. Nunc elementum pellentesque tempor. Praesent ullamcorper consectetur lorem ut auctor. Maecenas sit amet neque arcu. Phasellus posuere gravida odio, quis vehicula sem ultricies et. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis malesuada ullamcorper dui, ac maximus sapien placerat eget. Vestibulum nunc justo, imperdiet vitae nibh id, molestie iaculis arcu. Quisque sit amet tortor nisl. Vestibulum a vehicula metus. Maecenas placerat feugiat justo, in ultricies libero facilisis vel. Nam varius, nulla eget facilisis gravida, ex orci condimentum lacus, in sodales neque est et tellus.
-				</p>	
+			</div>
+		</div>
+		<div class="row landing-elements">
+			<div class="col-xs-4">
+				<p>Hello</p>
+			</div>
+			<div class="col-xs-4">
+				<p>Hello</p>
+			</div>
+			<div class="col-xs-4">
+				<p>Hello</p>
 			</div>
 		</div>
 	</section> <!-- End Divider-->
